--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,8 @@
 /* Set defaults */
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 body {
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #293544;
 }
