CS-80 style footer

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -12,6 +12,9 @@ a {
   text-decoration: none;
   color: black;
 }
+h1,h2,h3,h4,h5,p, a {
+  margin: 0;
+}
 .row {
   margin: 0;
 }
@@ -25,3 +28,4 @@ a {
 /* Import Components */
 @import './components/shared/header.css';
 @import './components/home/WelcomeCard.css';
+@import './components/shared/footer.css';
