--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -35,6 +35,9 @@ h1,h2,h3,h4,h5,p, a {
 .noPadding {
   padding: 0;
 }
+.hidden {
+  display: none;
+}
 
 /* Import Components */
 @import './components/shared/header.css';
@@ -43,3 +46,4 @@ h1,h2,h3,h4,h5,p, a {
 
 @import './components/businesses/businessList.css';
 @import './components/businesses/resultInfo.css';
+@import './components/businesses/map.css';
