--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -47,3 +47,4 @@ h1,h2,h3,h4,h5,p, a {
 @import './components/businesses/businessList.css';
 @import './components/businesses/resultInfo.css';
 @import './components/businesses/map.css';
+@import './components/businesses/businesses.css';
