--- a/src/styles/components/businesses/map.css
+++ b/src/styles/components/businesses/map.css
@@ -35,3 +35,25 @@
   font-weight: bold;
   font-size: 14px;
 }
+.expandMapBtn:hover {
+  cursor: pointer;
+}
+
+.reducedMapBottom_check {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 20px;
+  border: 2px solid #0C0033;
+  vertical-align: middle;
+}
+.reducedMapBottom_check:hover {
+    cursor: pointer;
+}
+.reducedMapBottom_check:active, .reducedMapBottom_check:focus, .reducedMapBottom_check:checked {
+  background: #0c0033;
+  outline: none;
+}
+.reducedMapeBottom_checklabel {
+  font-size: 14px;
+  margin-left: 10px;
+}
