CS-81 CS-82 Style reduced list items

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,7 +4,7 @@
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
-  color: #293544;
+  color: #0C0033;
   max-width: 1350px;
   margin: 0 auto;
 }
@@ -20,6 +20,9 @@ h1,h2,h3,h4,h5,p, a {
 }
 
 /* Useful Classes */
+.primary {
+  color: #3F51B5;
+}
 .secondary {
   color: #0C0033;
 }
@@ -29,8 +32,14 @@ h1,h2,h3,h4,h5,p, a {
 .bodyFont {
   font-size: 14px;
 }
+.smallFont {
+  font-size: 12px;
+}
 .opacity75 {
   opacity: .75;
+}
+.opacity50 {
+  opacity: .5;
 }
 .noPadding {
   padding: 0;
@@ -39,6 +48,12 @@ h1,h2,h3,h4,h5,p, a {
   display: none;
 }
 
+/* Shared */
+.visitWebsite {
+  color: #3F51B5;
+  text-transform: uppercase;
+  margin-right: 16px;
+}
 /* Import Components */
 @import './components/shared/header.css';
 @import './components/home/WelcomeCard.css';
@@ -48,3 +63,4 @@ h1,h2,h3,h4,h5,p, a {
 @import './components/businesses/resultInfo.css';
 @import './components/businesses/map.css';
 @import './components/businesses/businesses.css';
+@import './components/businesses/businessBlock.css';
