--- a/src/styles/components/businesses/businessBlock.css
+++ b/src/styles/components/businesses/businessBlock.css
@@ -16,3 +16,33 @@
   width: 14px;
   margin-right: 8px;
 }
+
+
+.business_block--expanded {
+  border-bottom: 1px solid rgba(0,0,0,.2);
+  padding: 16px 0px;
+  line-height: 16px;
+  margin-top: 16px;
+}
+.business_block--expanded_title {
+  font-size: 20px;
+  font-weight: normal;
+  color: #3F51B5;
+  margin-bottom: 16px;
+}
+.business_block--expanded_services {
+  margin-bottom: 8px;
+  font-size: 14px;
+  line-height: 20px;
+}
+.business_block--expanded_bottom {
+  margin-top: 16px;
+}
+.business_block_contact {
+  font-size: 14px;
+  padding-right: 0;
+  line-height: 20px;
+}
+.business_block_contact_address {
+  margin-bottom: 8px;
+}
