CS-81 CS-115 pagination styled, fixed tests

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -64,3 +64,4 @@ h1,h2,h3,h4,h5,p, a {
 @import './components/businesses/resultInfo.css';
 @import './components/businesses/businesses.css';
 @import './components/businesses/businessBlock.css';
+@import './components/businesses/pagination.css';
