--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -67,3 +67,4 @@ h1,h2,h3,h4,h5,p, a {
 @import './components/businesses/pagination.css';
 
 @import './components/home/hero.css';
+@import './components/home/browseBy.css';
