--- a/src/styles/components/business/business.css
+++ b/src/styles/components/business/business.css
@@ -30,10 +30,41 @@
   background: #3F51B5;
   color: white;
   padding: 26px 24px;
+  font-size: 14px;
+  margin-top: 8px;
+  line-height: 20px;
 }
 .bussinessView_name {
   font-weight: normal;
   font-size: 20px;
   line-height: 32px;
   margin-bottom: 8px;
+}
+.bussinessView_address {
+  margin: 8px 0 15px 0;
+}
+.bussinessView_contactInfo {
+  position: relative;
+  text-align: right;
+}
+.bussinessView_contactInfo_items {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.bussinessView_description {
+  padding: 25px;
+}
+.bussinessView_description h3 {
+  margin-bottom: 8px;
+}
+.bussinessView_description p, .bussinessView_description li {
+  opacity: .5;
+  font-size: 14px;
+  margin-bottom: 16px;
+}
+.bussinessView_service_text {
+  position: relative;
+  margin-left: 10px;
 }
