--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -61,6 +61,7 @@ h1,h2,h3,h4,h5,p, a {
 @import './components/shared/header.css';
 @import './components/home/WelcomeCard.css';
 @import './components/shared/footer.css';
+@import './components/shared/CheckBox.css';
 
 @import './components/businesses/map.css';
 @import './components/businesses/businessList.css';
