--- a/src/styles/components/filters/filters.css
+++ b/src/styles/components/filters/filters.css
@@ -11,10 +11,7 @@
   padding-top: 35px;
 }
 
-.filterSelectContainer {
-  position: relative;
-}
-.filterSelect {
+.filterInput {
   background: none;
   border: none;
   border-bottom: 1px solid rgba(12,0,51, .5);
@@ -24,11 +21,51 @@
   color: rgba(12,0,51, .5);
   font-size: 14px;
 }
+
+.filterTextForm {
+  position: relative;
+}
+.filterText {
+  outline: none;
+  opacity: 1;
+  color: #0C0033;
+  box-sizing: border-box;
+  padding-right: 26px;
+}
+.filterText_label {
+  font-size: 14px;
+  color: rgba(12,0,51, .5);
+  position: absolute;
+  bottom: 5px;
+  z-index: -1;
+  transition: .3s ease all;
+}
+.filterText_label--content {
+  font-size: 12px;
+  color: rgba(12,0,51, .5);
+  position: absolute;
+  bottom: 24px;
+  transition: .3s ease all;
+}
+.filterText_icon {
+  position: absolute;
+  right: 20px;
+}
+
+
+.filterSelectContainer {
+  position: relative;
+}
 .filterSelect:hover {
   cursor: pointer;
 }
 .filterSelect:active, .filterSelect:focus {
   outline: none;
+}
+.filterSelect_icon {
+  position: absolute;
+  right: 20px;
+  top: 5px;
 }
 .filterSelect_dropdown {
   background: white;
