--- a/src/styles/components/businesses/map.css
+++ b/src/styles/components/businesses/map.css
@@ -63,3 +63,15 @@
   font-size: 14px;
   margin-left: 10px;
 }
+
+.map_marker {
+  color: #3F51B5;
+}
+.map_marker:hover {
+  cursor: pointer;
+  color: white;
+  stroke: #3F51B5;
+  stroke-width:2px;
+  stroke-linejoin: round;
+  stroke: 1px solid blue;
+}
