--- a/src/styles/components/businesses/businessBlock.css
+++ b/src/styles/components/businesses/businessBlock.css
@@ -3,6 +3,10 @@
   padding: 16px 20px;
   line-height: 16px;
 }
+.business_block--reduced:hover {
+  background: rgba(96,125,139,0.1);
+  cursor: pointer;
+}
 .business_block--reduced h3 {
   margin-bottom: 8px;
 }
@@ -20,9 +24,13 @@
 
 .business_block--expanded {
   border-bottom: 1px solid rgba(0,0,0,.2);
-  padding: 16px 0px;
+  padding: 16px;
   line-height: 16px;
   margin-top: 16px;
+}
+.business_block--expanded:hover {
+  background: rgba(96,125,139,0.1);
+  cursor: pointer;
 }
 .business_block--expanded_title {
   font-size: 20px;
