--- a/src/styles/components/businesses/pagination.css
+++ b/src/styles/components/businesses/pagination.css
@@ -1,3 +1,8 @@
 .pagination {
-  padding: 25px;
+  padding: 25px 0;
+  position: absolute;
+  box-shadow: inset 0 1px 0 0 rgba(12,0,51, .1);
+  bottom: 0;
+  width: 100%;
+  font-size: 12px;
 }
