CS-126 Fix container widths

--- a/src/styles/components/businesses/businesses.css
+++ b/src/styles/components/businesses/businesses.css
@@ -1,7 +1,10 @@
 .businessesContainer {
   border-top: 1px solid #3F51B5;
 }
-.businessesContainerReduced .businessesRow--reduced, .businessesContainerReduced .businessList_top_content {
+ .businessesContainerReduced .businessList_top_content {
   max-width: 80%;
-  margin: 0 auto;
+}
+
+.businessRow {
+  max-width: 1300px;
 }
