--- a/src/styles/components/businesses/businessBlock.css
+++ b/src/styles/components/businesses/businessBlock.css
@@ -2,6 +2,7 @@
   border-top: 1px solid rgba(0,0,0,.2);
   padding: 16px 20px;
   line-height: 16px;
+  padding-bottom: 50px;
 }
 .business_block--reduced:hover {
   background: rgba(96,125,139,0.1);
@@ -27,6 +28,7 @@
   padding: 16px;
   line-height: 16px;
   margin-top: 16px;
+  padding-bottom: 50px;
 }
 .business_block--expanded:hover {
   background: rgba(96,125,139,0.1);
@@ -53,4 +55,10 @@
 }
 .business_block_contact_address {
   margin-bottom: 8px;
+}
+
+@media (max-width: 48em) {
+  .business_block_contact {
+    padding: 0;
+  }
 }
