--- a/src/styles/components/home/hero.css
+++ b/src/styles/components/home/hero.css
@@ -53,3 +53,20 @@
   display: block;
   font-weight: bold;
 }
+@media (max-width: 48em) {
+  .hero_content {
+    width: auto;
+  }
+  .hero h2 {
+    font-size: 24px;
+    line-height: 40px;
+  }
+  .hero_input {
+    width: 85%;
+    margin: 10px auto;
+  }
+  .hero_input_btn {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
