--- a/src/styles/components/shared/header.css
+++ b/src/styles/components/shared/header.css
@@ -1,7 +1,6 @@
 .headerContainer {
   background-color: #3F51B5;
   height: 40px;
-
 }
 .header {
   color: white;
@@ -10,6 +9,7 @@
 }
 .header_title {
   margin-right: 16px;
+  white-space: nowrap;
 }
 .header_leftLink {
   color: white;
@@ -21,4 +21,23 @@
   color: white;
   margin-left: 24px;
   line-height: 16px;
+}
+
+@media (max-width: 48em) {
+  .header {
+    padding: 12px 10px;
+    white-space: nowrap;
+    width: 100%;
+    text-align: center;
+  }
+  .header_title {
+    display: block;
+    margin-bottom: 10px;
+  }
+  .header_links {
+    margin: 5px auto;
+  }
+  .headerContainer {
+    height: auto;
+  }
 }
