--- a/src/styles/components/home/browseBy.css
+++ b/src/styles/components/home/browseBy.css
@@ -25,7 +25,7 @@
   margin-bottom: 16px;
 }
 
-@media (max-width: 48em) {
+@media (max-width: 457px) {
   .browseBy_btn {
     margin-right: 0;
   }
