--- a/src/styles/components/shared/footer.css
+++ b/src/styles/components/shared/footer.css
@@ -19,9 +19,15 @@ footer a {
   display: inline-block;
   margin-right: 5px;
 }
+footer .logo {
+  width: 100%;
+}
 
-@media (max-width: 48em) {
+@media (max-width: 993px) {
   footer {
     padding: 20px 10px;
+  }
+  footer .logo {
+    width: auto;
   }
 }
