--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,10 +11,10 @@
 
 //Components
 @import "components/search";
-@import "Components/links";
-@import "Components/buttons";
-@import "Components/filters/filters";
-@import "Components/pagination";
+@import "components/links";
+@import "components/buttons";
+@import "components/filters/filters";
+@import "components/pagination";
 
 //layout
 @import "layout/header";
