--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -2,14 +2,14 @@
  font-size: $font-size-header;
  font-weight: bold;
  line-height: 54px;
- width: 839px;
+ width: 80%;
  margin: auto;
  margin-top: 32px;
 }
 .hero p {
   font-size: $font-size-paragraphe;
   line-height: 24px;
-  width: 540px;
+  width: 50%;
   margin: 5px auto;
 }
 h1, h2, h3 {
