--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -10,7 +10,7 @@
   }
 
   &-search {
-    width: 296px;
+    width: 100%;
     .btn-outline{
       background-color: transparent;
       border: 1px solid $primary-color;
