--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $success-color:                     #0AC46F;
 $warning-color:                     #FFC000;
 $error-color:                       #FF0048;
 $white-color:                       #fff;
+$seconday-color-opacity:            rgba(42, 213, 135, 0.17);
 
 //typography
 $font-family-sans-serif:            'Proxima Nova', Georgia, sans-serif;
