--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -77,7 +77,7 @@ html {
 
 body {
     margin: 0;
-    font-family: $font-family-sans-serif;
+    font-family: roboto;
     color: $primary-color;
 }
 
@@ -91,6 +91,7 @@ body {
 
 a {
     background: transparent;
+    cursor: pointer;
 }
 
 /**
