--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -37,6 +37,7 @@
     font-size: 14px;
     width: 100%;
     text-align: right;
+    font-weight: bold;
     &:focus {
       outline: none;
     }
