--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -6,7 +6,7 @@
     font-weight: normal;
     font-size: 20px;
     padding: 0px;
-    font-family: $font-family-thin;
+    font-weight: 400;
   }
   .text-search-icon {
     position: absolute;
