--- a/src/styles/layout/_search-nav.scss
+++ b/src/styles/layout/_search-nav.scss
@@ -1,4 +1,4 @@
-.navTwo {
+.search-nav {
   padding: 20px 0;
   margin-top: 32px;
   padding-bottom: 0px;
@@ -8,20 +8,10 @@
   .logo {
     width: 172px;
   }
-}
-.search-nav {
-  .filterText_label {
-    font-size: 14px;
-    color: $primary-color;
-    position: absolute;
-    bottom: 5px;
-    z-index: -1;
-    transition: .3s ease all;
-  }
 
   &-invert {
     h3{
-      font-family:$font-family-thin;
+      font-weight: lighter;
     }
     input:focus {
       border: 0px;
@@ -41,7 +31,7 @@
       transition: all 0.4s ease-in;
       &::placeholder {
         color: $white-color;
-        font-family: $font-family-thin;
+        font-weight: lighter;
         font-size: 20px;
         opacity: 0.75;
       }
@@ -59,7 +49,7 @@
       &::placeholder {
         color: $secondary-color;
         font-size: 20px;
-        font-family: $font-family-thin;
+        font-weight: lighter;
       }
       &-icon {
         position: absolute;
@@ -67,15 +57,7 @@
         top: -9px;
       }
     }
-    .filterText_label {
-      font-size: 14px;
-      color: $white-color;
-      position: absolute;
-      bottom: 5px;
-      z-index: -1;
-      transition: .3s ease all;
-    }
-    .filterInput {
+    .dropdown-btn {
       background: none;
       border: none;
       border-bottom: 1px solid $white-color;
@@ -84,9 +66,121 @@
       width: 90%;
       color: $white-color;
       font-size: 14px;
-      font-family: $font-family-thin;
+      font-weight: lighter;
     }
   }
+}
+
+//Dropdown
+.dropdown {
+  &-btn {
+    background: none;
+    border: none;
+    border-bottom: 1px solid $white-color;
+    text-align: left;
+    padding: 4px 0;
+    color: $white-color;
+    font-size: 14px;
+    font-weight: lighter;
+    &-full {
+      width: 100%;
+    }
+    &-half {
+      width: 50%;
+      display: inline-block;
+      border-right: 1px solid rgba(0, 0, 0, 0.15);
+    }
+  }
+  &-container {
+    background: white;
+    box-shadow: 0 0 3px 0 rgba(0,0,0,0.25), 0 4px 8px 0 rgba(12,0,51,0.1);
+    border-radius: 2px;
+    position: absolute;
+    top: 40px;
+    z-index: 10;
+    padding: 12px 4px 12px 4px;
+    color: $primary-color;
+    &-collapse {
+      width: 271px;
+    }
+    &-expand {
+      width: 544px;
+    }
+  }
+  &-options{
+    border: none;
+    background: none;
+    color: $primary-color;
+    padding: 8px 12px 8px 12px;
+    font-size: 16px !important;
+    text-align: left;
+    width: 100%;
+    &:hover {
+      background-color: $seconday-color-opacity;
+    }
+    &:focus {
+      outline: none;
+    }
+    &-icon {
+      float: right;
+    }
+  }
+  &-sub-container {
+    background: white;
+    border:0px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    z-index: 10;
+    padding: 12px 4px 12px 4px;
+    color: $primary-color;
+    width: 48%
+  }
+}
+
+.search {
+  &-text-form {
+    position: relative;
+  }
+  &-filter{
+    font-weight: bold !important;
+    &-label {
+      background-color: $white-color;
+      color: $primary-color;
+      width: 15%;
+      border-radius: 16px;
+      padding: 5px 11px 5px 9px;
+      font-size: 14px !important;
+    }
+    &-icon {
+      float: right;
+    }
+    &-clear {
+      color: $white-color;
+      opacity: 0.75;
+      padding-left: 8px;
+    }
+  }
+}
+.filter-label {
+  &-container-show {
+    width: 100%;
+    display: initial;
+  }
+  &-container-hide {
+    display: none;
+  }
+}
+.filterSelectContainer {
+  position: relative;
+}
+.filterSelect:active, .filterSelect:focus {
+  outline: none;
+}
+.filterSelect_icon {
+  position: absolute;
+  right: 20px;
+  top: 5px;
 }
 
 .hide-filter {
