--- a/src/index.ejs
+++ b/src/index.ejs
@@ -19,6 +19,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8"/>
   <title>City of Sac</title>
+  <link rel="stylesheet" href="https://use.typekit.net/kcw3zdu.css">
 </head>
 <body>
   <div id="app">
