--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -17,7 +17,7 @@ $white-color:                       #fff;
 $seconday-color-opacity:            rgba(42, 213, 135, 0.17);
 
 //typography
-$font-family-sans-serif:            'Proxima Nova', Georgia, sans-serif;
+$font-family:                       'Proxima Nova', Georgia, sans-serif;
 $font-family-thin:                  'proxima_nova_ltthin', Georgia, sans-serif;
 $font-family-bold:                  'proxima_nova_altbold', Georgia, sans-serif;
 $font-size-header:                  36px;
