CS-185 Show filters in search bar, dropdown menu, filters

--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -77,7 +77,7 @@ html {
 
 body {
     margin: 0;
-    font-family: $font-family;
+    font-family: 'Proxima Nova';
     color: $primary-color;
 }
 
