--- a/src/styles/base/_margin.scss
+++ b/src/styles/base/_margin.scss
@@ -19,8 +19,14 @@
 .m-right-24 {
   margin-right: 24px;
 }
+.m-right-16 {
+  margin-right: 16px;
+}
 .m-left-24 {
   margin-left: 24px;
+}
+.m-left-16 {
+  margin-left: 16px;
 }
 .m-bot-100 {
   margin-bottom: 100px;
