CS-195 Display 5 categories on the home page

--- a/src/styles/base/_margin.scss
+++ b/src/styles/base/_margin.scss
@@ -10,6 +10,9 @@
 .mt-20 {
   margin-top: 20px;
 }
+.mt-bot-20 {
+  margin-bottom: 20px;
+}
 .m-top-24 {
   margin-top: 24px;
 }
@@ -30,4 +33,13 @@
 }
 .m-bot-100 {
   margin-bottom: 100px;
+}
+.margin-auto {
+  margin: auto;
+}
+.margin-x-16{
+  margin: 0 16px 0 16px;
+}
+.margin-y-20{
+  margin: 20px 0 20px 0;
 }
