--- a/src/styles/components/_links.scss
+++ b/src/styles/components/_links.scss
@@ -2,6 +2,8 @@
   font-size: $font-size-paragraphe;
   font-weight: normal;
   color: $white-color;
+  white-space: nowrap;
+  display: inline-block;
 }
 
 .link-primary {
