CS-201 Render homepage dropdown with filtered category response

--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -33,6 +33,7 @@
   background-color: $primary-color;
   width: 416px;
   padding: 8px;
+  z-index: 900;
   li {
     padding: 8px;
     text-align: left;
