fix pagination styles

--- a/src/styles/components/_pagination.scss
+++ b/src/styles/components/_pagination.scss
@@ -1,15 +1,4 @@
-.pagination {
-  padding: 25px 0;
-  bottom: 0;
-  width: 95%;
-  font-size: 12px;
-  background: white;
-}
-@media (max-width: 48em) {
-  .pagination {
-    padding: 25px 10px;
-  }
-}
+
 .pagination-container {
   &-hide {
     display: none;
@@ -20,26 +9,33 @@
   padding: 8px;
   background-color: $primary-color;
   cursor: pointer;
-  &-grey {
-    background-color: $primary-color;
-    opacity: 0.3;
-  }
-  &-hide {
-    display: none;
-  }
 }
 .pagination-index {
   font-size: 14px;
   font-weight: bold;
-  margin-left: 11px;
-  margin-right: 11px;
-  cursor: pointer;
-  color: $primary-color;
-  &-primary {
+  list-style: none;
+  padding: 0px;
+  .previous,
+  .next {
     color: $primary-color;
   }
-  &-primary-opacity {
-    color: $primary-color;
+  .previous.disabled,
+  .next.disabled {
     opacity: 0.3;
+  }
+  li {
+    display: inline-block;
+    margin-left: 11px;
+    margin-right: 11px;
+    a {
+      color: #bbbbbb;
+      font-weight: bold;
+    }
+  }
+  li.active {
+    a {
+      color: #000;
+      font-weight: bold;
+    }
   }
 }
