--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
 @import "components/links";
 @import "components/buttons";
 @import "components/pagination";
+@import "components/businesses/resultInfo";
 
 //layout
 @import "layout/header";
