--- a/src/styles/components/businesses/_resultInfo.scss
+++ b/src/styles/components/businesses/_resultInfo.scss
@@ -1,3 +1,9 @@
+.result-container {
+  display: initial;
+  &-hide {
+    display: none;
+  }
+}
 .businessList_top {
   padding: 25px;
 }
@@ -17,6 +23,22 @@
   margin-left: 15px;
   position: relative;
   margin-bottom: 5px;
+}
+
+.no-result-message {
+  &-show {
+    text-align: center;
+    margin-bottom: 116px;
+    margin-top: 91px;
+    .message {
+      font-size: 24px;
+      line-height: 36px;
+      opacity: 0.5;
+    }
+  }
+  &-hide {
+    display: none;
+  }
 }
 
 @media (max-width: 48em) {
