--- a/src/styles/layout/_search-nav.scss
+++ b/src/styles/layout/_search-nav.scss
@@ -71,6 +71,7 @@
       color: $white-color;
       font-size: 14px;
       font-weight: lighter;
+      opacity: 0.75;
     }
   }
 }
@@ -224,6 +225,9 @@
     color:#fff;
     li {
       margin-bottom: 16px;
+      a {
+        color: #fff;
+      }
     }
 }
 .full-width-text-filter {
