CS-232 update the design of the filters, fix margin, update text, add dropdown scroll, message of not found in dropdown

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -24,6 +24,7 @@
       float: left;
     }
     span {
+      font-weight: bold;
       display: inline-block;
       width: 100%;
       text-align: left;
@@ -43,6 +44,7 @@
     }
     &-primary {
       color: $primary-color;
+      font-weight: bold;
     }
   }
 }
