CS-250 update expanded org view design

--- a/src/styles/base/_margin.scss
+++ b/src/styles/base/_margin.scss
@@ -7,7 +7,7 @@
 .m-bot-16 {
   margin-bottom: 16px;
 }
-.mt-20 {
+.m-top-20 {
   margin-top: 20px;
 }
 .mt-bot-20 {
@@ -19,8 +19,17 @@
 .m-bot-24 {
   margin-bottom: 24px;
 }
+.m-bot-25 {
+  margin-bottom: 25px;
+}
 .m-right-24 {
   margin-right: 24px;
+}
+.m-top-28 {
+  margin-top: 28px;
+}
+.m-bot-28 {
+  margin-bottom: 28px;
 }
 .m-right-16 {
   margin-right: 16px;
