--- a/src/styles/components/businesses/map.css
+++ b/src/styles/components/businesses/map.css
@@ -2,6 +2,8 @@
   position: relative;
   transition: .3s ease all;
   padding-right: 0px;
+  float: right;
+  width: 30%;
 }
 .mapReduced {
   margin-top: 16px;
