--- a/src/styles/layout/_search-nav.scss
+++ b/src/styles/layout/_search-nav.scss
@@ -207,7 +207,7 @@
   display: initial;
   position: absolute;
   transition: all 0.4s ease-in;
-  right: 0px;
+  right: 0;
   top: 100%;
   z-index: 8;
   background-color: #4A4A4A;
