--- a/src/styles/base/_margin.scss
+++ b/src/styles/base/_margin.scss
@@ -34,11 +34,17 @@
 .m-right-16 {
   margin-right: 16px;
 }
+.m-right-52 {
+  margin-right: 52px;
+}
 .m-left-24 {
   margin-left: 24px;
 }
 .m-left-16 {
   margin-left: 16px;
+}
+.m-x-7 {
+  margin: 0 7px 0 7px;
 }
 .m-bot-100 {
   margin-bottom: 100px;
