--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -9,6 +9,9 @@
   font-size: $font-size-paragraphe;
   line-height: 24px;
   margin: 5px auto;
+  @media (max-width: 48em) {
+    margin-top: 16px;
+  }
 }
 h1, h2, h3 {
   font-weight: normal !important;
