--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,5 +1,5 @@
 .btn {
-  padding: 24px;
+  padding: 20px 24px 20px 24px;
   outline: none;
   &:focus {
     outline: none;
@@ -7,6 +7,8 @@
   &-outline{
     background-color: transparent;
     border: 1px solid $primary-color;
+    align-items: center;
+    display: flex;
   }
 
   &-search {
@@ -15,13 +17,11 @@
       background-color: transparent;
       border: 1px solid $primary-color;
     }
-    &-icon {
-      position: absolute;
-    }
     &-text {
-      width: 70%;
+      width: 89%;
       display: inline-block;
       float: left;
+      line-height: 24px;
     }
     span {
       font-weight: bold;
@@ -39,6 +39,7 @@
     width: 100%;
     text-align: right;
     font-weight: bold;
+    margin-left: 16px;
     &:focus {
       outline: none;
     }
@@ -46,6 +47,15 @@
       color: $primary-color;
       font-weight: bold;
     }
+  }
+  &-clear {
+    font-size: 16px;
+    svg {
+      margin-left: 16px;
+    }
+  }
+  @media (max-width: 48em) {
+    padding: 8px;
   }
 }
 .underline {
