--- a/src/styles/components/_pagination.scss
+++ b/src/styles/components/_pagination.scss
@@ -15,6 +15,9 @@
   font-weight: bold;
   list-style: none;
   padding: 0px;
+  .previous {
+    margin-left: 0px;
+  }
   .previous,
   .next {
     color: $primary-color;
@@ -25,8 +28,7 @@
   }
   li {
     display: inline-block;
-    margin-left: 11px;
-    margin-right: 11px;
+    margin: 0 20px 0 20px;
     a {
       color: #bbbbbb;
       font-weight: bold;
