--- a/src/styles/layout/_business.scss
+++ b/src/styles/layout/_business.scss
@@ -1,8 +1,18 @@
 .business-card {
   background-color: rgba(0, 0, 0, 0.05);
-  padding: 24px;
+  padding: 20px 24px 20px 24px;
   margin-bottom: 12px;
   overflow: hidden;
+  .business-service {
+    h4 {
+      font-weight: bold;
+    }
+  }
+  .full-information {
+    .business-title {
+      opacity: 0.5;
+    }
+  }
   &-collapse,
   &-expand {
     position: relative;
@@ -14,33 +24,26 @@
      display: none;
    }
   .location {
+     font-size: 12px;
      font-weight: bold;
      margin-top: 12px;
-     bottom: 0px;
-     position: absolute;
     }
   }
   &-collapse {
-    height: 87px;
-    transition: all 0.4s ease-out;
     .full-information {
-      height: 0px;
+      max-height: 0px;
       overflow: hidden;
-      transition: all 0.4s ease-out;
+      transition: all 0.4s ease-in;
     }
   }
-   &-expand{
-    transition: all 0.4s ease-in;
+  &-expand {
     .location {
       display: none;
     }
     .full-information {
       margin-top: 22px;
-      height: auto;
-      transition: all 0.4s ease-out;
-      p {
-        opacity: 0.5;
-      }
+      max-height: 2000px;
+      transition: all 0.4s ease-in;
     }
   }
 
@@ -51,10 +54,12 @@
     margin-top: 0;
     margin-bottom: 25px;
     border: 1px solid rgba(96,125,139,0.25);
+    opacity: 0.25;
   }
   h4 {
     margin-bottom: 4px;
-    font-weight: bold;
+    font-weight: normal;
+    line-height: 24px
   }
   .social-icons {
     margin-bottom: 32px;
