--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -1,20 +1,22 @@
 @mixin container($bg-color, $ft-color, $invert){
   @if $invert == true {
     max-width: 1140px;
-    margin: 24px auto;
+    margin: 33px 0 24px 0;
     position: relative;
     background-color: $bg-color;
     color: $ft-color;
     font-weight: normal;
     padding: 24px;
+    line-height: 24px;
   } @else {
     max-width: 1140px;
-    margin: 24px auto;
+    margin: 33px 0 28px 0;
     position: relative;
     background-color: $bg-color;
     color: $ft-color;
     font-weight: normal;
     padding: 24px;
+    line-height: 24px;
   }
 }
 .container {
@@ -33,6 +35,10 @@
   }
   p {
     font-weight: lighter;
+  }
+  @media (max-width: 48em) {
+    margin: 6px 0 8px 0;
+    padding: 0;
   }
 }
 
@@ -62,6 +68,7 @@ $width: (
         margin: auto;
         p {
           font-size: 14px;
+          line-height: 24px;
         }
         a {
           font-size: 16px;
@@ -77,6 +84,7 @@ $width: (
         padding-left: 1rem;
         p {
           font-size: 14px;
+          line-height: 24px;
         }
         a {
           font-size: 16px;
@@ -93,6 +101,7 @@ $width: (
           margin: auto;
           p {
             font-size: 14px;
+            line-height: 24px;
           }
           a {
             font-size: 16px;
@@ -108,6 +117,7 @@ $width: (
           padding-left: 1rem;
           p {
             font-size: 14px;
+            line-height: 24px;
           }
           a {
             font-size: 16px;
@@ -122,11 +132,19 @@ $width: (
 
 //map
 .map-container-expand{
-  width: 220px;
-  height: 220px;
+  width: 237px;
+  height: 237px;
 }
 
 .map-container-collapse {
   width: 100%;
-  height: 372px;
+  height: 485px;
+}
+
+@media (max-width: 48em) {
+  .container--full {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    margin-top: 24px !important;
+  }
 }
