--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,4 +1,59 @@
 .headerContainer {
   background-color: $primary-color;
   height: 40px;
+  font-size: 12px;
+  .header_title {
+    color: #fff;
+  }
+  .contentContainer {
+    padding: 12px;
+  }
+  input {
+    display: none;
+  }
+  .collapse-menu-icon,
+  img {
+    vertical-align: middle;
+    width: 32px;
+    display: none;
+    margin-right: 8px;
+  }
+  @media (max-width: 48em) {
+    height: auto;
+    position: fixed;
+    width: 100%;
+    font-size: 14px;
+    z-index: 1;
+    top: 0px;
+    .collapse-menu-icon,
+    img {
+      display: initial;
+    }
+    input:checked ~ nav.header_links {
+      height: 100vh;
+      transition: height 0.5s ease-in;
+    }
+    nav.header_links {
+      height: 0px;
+      overflow: hidden;
+      transition: height 0.5s ease-out;
+      width: 100%;
+      .header_link {
+        display: block;
+        text-align: left;
+        margin: 40px 0 40px 0;
+      }
+    }
+    .header {
+      font-size: 14px;
+      padding: 12px 16px;
+      white-space: nowrap;
+      width: 100%;
+      text-align: center;
+      color: #fff;
+    }
+    .header_leftLink {
+      display: none;
+    }
+  }
 }
