--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,3 +27,4 @@
 @import "layout/search-nav";
 @import "layout/business";
 @import "layout/search-nav-mobile";
+@import "layout/_result-page-mobile";
