--- a/src/styles/components/_pagination.scss
+++ b/src/styles/components/_pagination.scss
@@ -15,11 +15,9 @@
   font-weight: bold;
   list-style: none;
   padding: 0px;
-  .previous {
-    margin-left: 0px;
-  }
   .previous,
   .next {
+    margin-left: 0px;
     color: $primary-color;
   }
   .previous.disabled,
@@ -38,6 +36,11 @@
     a {
       color: #000;
       font-weight: bold;
+    }
+  }
+  @media (max-width: 42em) {
+    li {
+      margin: 0 12px 0 12px;
     }
   }
 }
